--- a/RA_figs.Rmd
+++ b/RA_figs.Rmd
@@ -5,7 +5,7 @@ data <- select(SummarySppAge[["mean"]], species, age, repro_inv, growth_leaf, le
   LL_death,height_0,total_weight_0,all_leaf_inv)
 data$leaf_shed2 <- data$leaf_weight_0 / data$LL_death
 data_ind <- select(SummaryInd,species,individual,age, LL_death,height_0,leaf_shed,leaf_weight_0,
-                   growth_leaf_pos,repro_inv,total_weight_0,all_leaf_inv,total_inv)
+                   growth_leaf_pos,repro_inv,total_weight_0,all_leaf_inv,total_inv,surplus_energy)
 
 
 ```{r}
@@ -162,57 +162,28 @@ for (i in seq_along(all_species)) {
 
 
 ```{r}
-#FIGURE 2
-par(mfrow = c(7,3), cex = 1, oma = c(5, 5, 1, 1), mar = c(0, 3, 2, 1))
+#FIGURE 3
+par(mfrow = c(7,4), cex = 1, oma = c(5, 5, 1, 1), mar = c(0, 3, 2, 1))
 
 all_species <- unique(data$species)
 
 for (i in seq_along(all_species)) {
   
   data_sp <- filter(data, species == all_species[i])
+  data_sp_ind <- filter(data_ind, species == all_species[i])
+  data_sp_no5 <- subset(data_sp,age!=5)
   m <- max(data_sp$age)
   n <- length(data_sp$age)
   
-  #RA leaf area, max 1
-  plot(NA, log = "x", ylim = c(0, 1),  xlim = c(1.4, 32), xaxs = "i", yaxs = "i", axes= FALSE, ann=FALSE)
+#panel 1
+  plot(NA, log = "xy", xlim = c(1,(max(data_sp_ind$all_leaf_inv)*1.1)),  ylim = c(1,(max(data_sp_ind$repro_inv)*1.1)), xaxs = "i", yaxs = "i", axes= FALSE, ann=FALSE)
   box()
-  axis(1, labels = (i %in% c(7,14)))
-  axis(2, at = c(0, 0.2, 0.4, 0.6, 0.8, 1), labels = c(0,"","","","",1), las=1)
-  polygon(x = c(1,m,m,1), y = c(1,1, 0, 0), col = "darkseagreen2", density = NA)
-  polygon(x = data_sp$age[c(1:n, n, 1)], y = c(data_sp$RA_max_1, 0, 0), col = "coral3", density = NA)
+  points(x = data_sp_ind$all_leaf_inv, y = data_sp_ind$repro_inv, col = "darkseagreen4", lwd=2,type="p",pch=1,cex=1.4)
   
-  if (i %in% c(4,11)) {
-    mtext("Proportional allocation to reproduction vs leaf growth", 2, line=2, outer=FALSE)
-  }
-  
-  #RA leaf area, all leaf
-  plot(NA, log = "x", ylim = c(0, 1),  xlim = c(1.4, 32), xaxs = "i", yaxs = "i", axes= FALSE, ann=FALSE)
+#panel 2
+  plot(NA, log = "xy", xlim = c(1,(max(data_sp_ind$growth_leaf_pos)*1.1)),  ylim = c(1,(max(data_sp_ind$repro_inv)*1.1)), xaxs = "i", yaxs = "i", axes= FALSE, ann=FALSE)
   box()
-  axis(1, labels = (i %in% c(7,14)))
-  axis(2, at = c(0, 0.2, 0.4, 0.6, 0.8, 1), labels = c(0,"","","","",1), las=1)
-  polygon(x = c(1,m,m,1), y = c(1,1, 0, 0), col = "darkseagreen4", density = NA)
-  polygon(x = data_sp$age[c(1:n, n, 1)], y = c(data_sp$prop_surplus, 0, 0), col = "darkseagreen2", density = NA)
-  polygon(x = data_sp$age[c(1:n, n, 1)], y = c(data_sp$RA_vs_all_leaf, 0, 0), col = "coral3", density = NA)
-  mtext(labels.spp.full(all_species[i]), 3, 0)
-  
-  if (i %in% c(4,11)) {
-    mtext("Proportional allocation to reproduction vs leaf growth + REPLACEMENT", 2, line=2, outer=FALSE)
-  }
-  
-  #proportion different energy
-  plot(NA, log = "x", ylim = c(0, 1),  xlim = c(1.4, 32), xaxs = "i", yaxs = "i", axes= FALSE, ann=FALSE)
-  box()
-  axis(1, labels = (i %in% c(7,14)))
-  axis(2, at = c(0, 0.2, 0.4, 0.6, 0.8, 1), labels = c(0,"","","","",1), las=1)
-  
-  
-  polygon(x = data_sp$age[c(1:n, n, 1)], y = c(data_sp$prop_stem, 0, 0), col = "burlywood4", density = NA)
-  polygon(x = data_sp$age[c(1:n, n, 1)], y = c(data_sp$prop_leaf_replacement, 0, 0), col = "darkseagreen4", density = NA)
-  polygon(x = data_sp$age[c(1:n, n, 1)], y = c(data_sp$prop_leaf_expand, 0, 0), col = "darkseagreen2", density = NA)
-  polygon(x = data_sp$age[c(1:n, n, 1)], y = c(data_sp$prop_repro, 0, 0), col = "coral3", density = NA)
-  
-  if (i %in% c(4,11)) {
-    mtext("Proportional allocation to all energy sinks", 2, line=2, outer=FALSE)
-  }
+  points(x = data_sp_ind$growth_leaf_pos, y = data_sp_ind$repro_inv, col = "darkseagreen4", lwd=2,type="p",pch=1,cex=1.4)
+ 
 }
 ```
